--- a/.github/workflows/udapp.yml
+++ b/.github/workflows/udapp.yml
@@ -16,6 +16,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'temurin'
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v2
       - name: Build and test with Gradle
         uses: gradle/gradle-build-action@v2
         with:
