--- a/.github/workflows/udapp.yml
+++ b/.github/workflows/udapp.yml
@@ -18,6 +18,8 @@ jobs:
           distribution: 'temurin'
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
       - name: Build and test with Gradle
         uses: gradle/gradle-build-action@v2
         with:
